# Central

./: .gitignore  CLAUDE.md  PLAN.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  test-ui-screenshots.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.a5c/: package-lock.json  package.json  screenshot.mjs
.a5c/processes/: central-tauri-build.js
docs/plans/: 2026-02-20-store-owns-persistence-design.md  2026-02-20-store-owns-persistence-plan.md  2026-02-21-ux-polish-design.md  2026-02-21-ux-polish-plan.md
scripts/: screenshot.ts
sidecar/: package.json  pnpm-lock.yaml  tsconfig.json
sidecar/src/: async-queue.ts  index.ts  mock-session.ts  sdk-message-handler.ts  session-worker.ts  tool-approval.ts  types.ts
sidecar/test/: test-real-sdk.ts  test-tool-approval-unit.ts  test-tool-approval.ts
src/: App.tsx  globals.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_session_type.sql
src-tauri/src/: debug_log.rs  lib.rs  main.rs  notifications.rs
src-tauri/src/commands/: agents.rs  mod.rs  notifications.rs  settings.rs  terminal.rs
src-tauri/src/commands/files/: diff.rs  discover.rs  git_helpers.rs  mod.rs  status.rs  tree.rs  types.rs
src-tauri/src/pty/: manager.rs  mod.rs  types.rs
src-tauri/src/sidecar/: manager.rs  mod.rs  types.rs
src/components/: BootstrapLoading.tsx  CommandPalette.tsx  PaneErrorBoundary.tsx
src/core/: constants.test.ts  (+3 more)
(+359 files in other folders)
