[package]
name = "central"
version = "0.1.0"
edition = "2021"
description = "Orchestrate parallel Claude Code agents"
rust-version = "1.77"

[lib]
name = "central_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
